[project]
name = "amlint"
version = "0.1.1"
description = "Semantic linter for Prometheus Alertmanager configs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "danikdanik2013"}]
keywords = ["alertmanager", "prometheus", "linter", "devops", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = ["pyyaml>=5.1"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/danikdanik2013/amlint"
Repository = "https://github.com/danikdanik2013/amlint"
"Bug Tracker" = "https://github.com/danikdanik2013/amlint/issues"

[project.scripts]
amlint = "amlint.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
